Switched from Fira Code to Iosevka

--- a/dotfiles/.emacs.d/org.org
+++ b/dotfiles/.emacs.d/org.org
@@ -86,7 +86,7 @@ Org-faces changes the font size of the headings to make them bigger in the org f
                   (org-level-6 . 1.0)
                   (org-level-7 . 1.0)
                   (org-level-8 . 1.0)))
-    (set-face-attribute (car face) nil :font "Fira Code Light" :weight 'regular :height (cdr face)))
+    (set-face-attribute (car face) nil :font "Iosevka" :height (cdr face)))
 
   ;; Ensure that anything that should be fixed-pitch in Org files appears that way
   (set-face-attribute 'org-block nil    :foreground nil :inherit 'fixed-pitch)
