--- a/dotfiles/.emacs.d/email.org
+++ b/dotfiles/.emacs.d/email.org
@@ -137,7 +137,9 @@ This section contains the ~mu4e~ emacs specific configuration.
           (:maildir "/Packages" :key ?p)
           (:maildir "/Work" :key ?w)
           (:maildir "/Club" :key ?c)
-          (:maildir "/UCSC" :key ?u))))
+          (:maildir "/UCSC" :key ?u)
+          (:maildir "/Newsletters" :key ?n)
+          (:maildir "/Automated" :key ?A)))
 #+end_src
 
 Adding some configuration to correct ~mu4e~'s default values.
