Emacs - added spam folder; removed ledger; fixed aerospace

--- a/dotfiles/.emacs.d/email.org
+++ b/dotfiles/.emacs.d/email.org
@@ -134,7 +134,8 @@ This section contains the ~mu4e~ emacs specific configuration.
           (:maildir "/Club" :key ?c)
           (:maildir "/UCSC" :key ?u)
           (:maildir "/Newsletters" :key ?n)
-          (:maildir "/Automated" :key ?A))))
+          (:maildir "/Automated" :key ?A)
+          (:maildir "/Spam" :key ?S))))
 #+end_src
 
 Adding some configuration to correct ~mu4e~'s default values.
